--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jquery"
   ],
   "bugs": {
-    "url": "git@github.com:malsup/cycle2.git"
+    "url": "https://github.com/malsup/cycle2.git"
   },
   "licenses": [
     {
@@ -36,20 +36,19 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "jquery": ">=1.7"
+    "jquery": ">=2.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": ">=0.1.9",
-    "grunt-contrib-jshint": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-git-authors": "~1.2.0"
+    "grunt": "~0.4.5",
+    "grunt-cli": ">=0.1.13",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-git-authors": "~2.0.1"
   },
   "scripts": {
-    "test": "grunt",
-    "prepublish": "grunt build"
+    "prepublish": "grunt"
   },
   "main": "dist/jquery.cycle2.js"
 }
